start first gallery layout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,14 @@
 @tailwind utilities;
 
 html {
-	font-family: 'Fira Sans', Calibri, Candara, Segoe, Segoe UI, Optima, Arial,
-		sans-serif;
+	font-family: 'Fira Sans', sans-serif;
+}
+
+html,
+body {
+	height: 100%;
+}
+
+body {
+	@apply bg-gradient-to-b from-teal-50 to-orange-50 via-slate-100;
 }
