--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,19 @@ body,
 body {
 	@apply bg-gradient-to-b from-sky-100 to-stone-300 via-slate-50;
 }
+
+.gallery {
+	animation: 2s fade-in;
+}
+
+@keyframes fade-in {
+	from {
+		opacity: 0;
+	}
+	40% {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
